@@ -5,6 +5,7 @@
 -Added /sids argument for credentials/mimikatz/golden_ticket
 -Added credential parsing for dcsync output
 -updated links for PowerTools
+-Fixed bug in credential parsing with ":" inside of the password,username, or domain
 
 8/20/2015
 ---------
